DT-1260 - Fix for navigation folder width. White will now grow to match the length of the word and words are able to wrap

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -510,8 +510,8 @@ div.widget.extendednavigation ul {
 
 		&:hover ul {
 			margin: 0;
-			width: 100%;
-			min-width: 10px;
+			width: auto;
+			min-width: 100%;
 			background-color: @color-swatch1;
 			background-image: none;
 			-webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
